# ICE-client

./: .gitignore  main.c  readme.md
ICE client/: CMakeLists.txt  openvpn-ice.h
ICE client/Android/application/: CMakeLists.txt  build.gradle
ICE client/Linux/: ICE.cbp  dependencies.txt
ICE client/Windows/: ICE.cbp
ICE client/src/: a.out  main.c  tests.c
ICE client/src/data structures/buffer/: buffer.c  buffer.h
ICE client/src/data structures/priority queue/: priority queue.c  priority queue.h
ICE client/src/data structures/static buffer/: static buffer.c  static buffer.h
ICE client/src/input/: input.c  input.h
ICE client/src/mathematic/cryptography/: cryptography.c  cryptography.h
ICE client/src/mathematic/probability/random/: random.c  random.h
ICE client/src/network/HTTP/: HTTP.c  HTTP.h
ICE client/src/network/ICE/: ICE.c  ICE.h
ICE client/src/network/JSON/: JSON.c  JSON.h
ICE client/src/network/SDP/: SDP.h
ICE client/src/network/STUN/: STUN.c  STUN.h
ICE client/src/network/STUN/attributes/: ERROR_CODE.c  MAPPED_ADDRESS.c  MESSAGE_INTEGRITY.c  NONCE.c  REALM.c  USERNAME.c
ICE client/src/network/TURN/: TURN.c  TURN.h
ICE client/src/network/TURN/attributes/: DATA.c  DONT_FRAGMENT.c  REQUESTED_TRANSPORT.c  XOR_PEER_ADDRESS.c  XOR_RELAYED_ADDRESS.c
ICE client/src/network/base64/: base64.c  base64.h
ICE client/src/output/: output.c  output.h
ICE client/src/system/: Android.h  Apple.h  Linux.h  Windows.h
ICE client/src/system/devices/network/: network.h
ICE client/src/system/extends/: extends.c  extends.h
error/: error.c  error.h
(+258 files in other folders)
